experimental/ast/testdata/parser/syntax/lonely.proto.stderr
error: unexpected `;` in edition declaration
  --> testdata/parser/syntax/lonely.proto:15:8
   | 
15 | edition;
   |        ^ expected `=`

error: unexpected `;`
  --> testdata/parser/syntax/lonely.proto:17:10
   | 
17 | syntax = ;
   |          ^ expected identifier, number, string, `.`, `-`, `(...)`, `[...]`, or `{...}`

error: syntax declaration must be the first declaration in a file
  --> testdata/parser/syntax/lonely.proto:17:1
   | 
15 | edition;
   | -------- previous declaration
16 | 
17 | syntax = ;
   | ^^^^^^^^^^ expected this to be the first declaration

encountered 3 errors
